--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -35,7 +35,7 @@ atlasHero(nbTitle, hero_url);
   position: fixed;
   top: 120px;
   right: 20px;
-  width: 320px;
+  width: 380px;
   background: white;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -43,13 +43,18 @@ atlasHero(nbTitle, hero_url);
   z-index: 1000;
   max-height: calc(100vh - 140px);
   overflow-y: auto;
+  overflow-x: hidden;
   transition: all 0.3s ease;
 }
 
 .floating-sidebar.minimized {
-  width: 200px;
-  max-height: 60px;
+  width: 60px;
+  height: 60px;
   overflow: hidden;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar-header {
@@ -59,6 +64,18 @@ atlasHero(nbTitle, hero_url);
   margin-bottom: 15px;
   padding-bottom: 8px;
   border-bottom: 2px solid #0066cc;
+  padding: 15px 15px 8px 15px;
+}
+
+.floating-sidebar.minimized .sidebar-header {
+  margin-bottom: 0;
+  padding: 0;
+  border-bottom: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .sidebar-header h4 {
@@ -66,24 +83,44 @@ atlasHero(nbTitle, hero_url);
   font-size: 16px;
 }
 
+.floating-sidebar.minimized .sidebar-header h4 {
+  display: none;
+}
+
 .minimize-btn {
   background: #0066cc;
-  border: none;
+  border: 1px solid #0052a3;
   cursor: pointer;
-  font-size: 14px;
-  padding: 4px 10px;
-  color: #000000;
+  font-size: 16px;
+  padding: 6px 12px;
+  color: #003366;
   border-radius: 4px;
-  transition: background 0.2s;
+  transition: all 0.2s;
+  font-weight: bold;
+  min-width: 32px;
+  text-align: center;
 }
 
 .minimize-btn:hover {
   background: #004499;
+  border-color: #003366;
+  color: #ffffff;
+}
+
+.floating-sidebar.minimized .minimize-btn {
+  padding: 8px;
+  min-width: 40px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar-content {
   padding: 0 15px 15px 15px;
   transition: opacity 0.3s ease;
+  overflow-x: hidden;
 }
 
 .floating-sidebar.minimized .sidebar-content {
@@ -92,7 +129,25 @@ atlasHero(nbTitle, hero_url);
 }
 
 .sidebar-section {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+.sidebar-section > * {
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+/* Ensure multi-select components fit within sidebar */
+.sidebar-section .observablehq,
+.sidebar-section form,
+.sidebar-section div[class*="select"],
+.sidebar-section button {
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 @media (max-width: 1400px) {
@@ -110,7 +165,7 @@ atlasHero(nbTitle, hero_url);
 </style>
 
 <div class="floating-sidebar">
-  <div style="padding: 15px 15px 0 15px;">
+  <div style="padding: 0px 15px 0 15px;">
     <div class="sidebar-header">
       <h4>Region Selection</h4>
       <button class="minimize-btn">▼</button>
@@ -125,10 +180,6 @@ atlasHero(nbTitle, hero_url);
     </div>
     <div class="sidebar-section">
       ${viewof selectedAdmin2}
-    </div>
-    <div style="margin-top: 15px; padding: 15px; border-top: 1px solid #eee; font-size: 0.9em; color: #666;">
-      <strong>Current Selection:</strong><br>
-      ${breadcrumb}
     </div>
   </div>
 </div>
